CAMEL-21996: Replace java.io.File with Java NIO Path API in camel-jbang (#18044)
This commit replaces the usage of java.io.File with the Java NIO Path API in the camel-jbang module. This modernizes the code to use the more robust and flexible NIO API instead of the legacy java.io.File API.